themes/so-theme/docroot/_diffs/css/so_core.css
/* ... */
#wrapper {
	padding: 0;
}

html.aui {
	.alert .close {
		background: inherit;
		border-width: 0;

		@include box-shadow(none);

		padding: 0;
	}

	.navbar .nav-navigation {
		display: none;
	}

	.dockbar-split .dockbar {
		@include transition-duration(0.2s);
		@include transition-property(margin-left);

		.navbar-inner .nav-add-controls {
			background: $controlBgColor;
			border-right: 1px solid $defaultBorderColor;
			bottom: 0;
			margin-left: -64px;
			top: 0;

			@include transition-duration(0.2s);
			@include transition-property(margin-left);

			.dockbar-item {
				float: none;
			}
		}

		.info-items, .info-link-container {
			a {
				background: transparent none;
			}
		}

		.info-button .diamond {
			border-bottom-color: transparent;
			border-left-color: rgba(0, 0, 0, 0.5);
			right: -12px;
			top: 0;

			&:after {
				border-top-color: transparent;
			}
		}

		.hide + .info-link-container .info-button .diamond {
			border-bottom-color: rgba(0, 0, 0, 0.5);
			border-left-color: transparent;
			right: 0;
			top: -12px;

			&:after {
				border-top-color: rgba(0, 0, 0, 0.5);
			}
		}

		&.navbar-static-top .collapse, .navbar-inner .container {
			.nav-account-controls {
				top: 0;

				@include transition-duration(0.2s);
				@include transition-property(top);
			}
		}

		.info-items {
			left: auto;
			position: relative;
			right: 0;
			top: 44px;

			.page-customization-bar .page-customization-bar-text {
				height: 74px;
			}

			.btn-link {
				border-width: inherit;
				padding: 4px 12px;
				text-decoration: none;
				text-shadow: inherit;
			}
		}

		.info-link-container {
			left: auto;
			position: relative;
			right: 0;
			top: 56px;
		}
	}
}

.aui .dockbar-split.show-dockbar {
	#wrapper, .so-portlet-user-bar {
		border-left: 63px solid $controlBgColor;

		@include transition-duration(0.2s);
		@include transition-property(border-left);
	}

	.dockbar .navbar-inner .nav-add-controls {
		background: $controlBgColor;
		bottom: 0;
		margin-left: 0;
		top: 0;
	}
}

.aui-helper-hidden {
	clip: rect(0, 0, 0, 0);
	height: 0;
	overflow: hidden;
	position: absolute;
	width: 0;
}

a {
	color: $blue;
	text-decoration: none;

	&:hover {
		text-decoration: underline;
	}
}

.button {
	@include border-radius(4px);

	&:hover {
		text-decoration: none;
	}
}

#banner, #content, .clear, .portlet-toolbar, .breadcrumbs ul {
	@include clear-both;
}

/* ---------- Forms custom ---------- */

.aui-panel-hd .aui-toolbar-content {
	padding: 0.125em;

	.aui-state-default {
		background: transparent none;
		border-width: 0;

		@include box-shadow(none);
	}
}

.aui-panel-hd, .lfr-panel.lfr-extended .lfr-panel-titlebar {
	@include default-border;

	@include normal-gradient;
}

.invite-members, .social-relations a, .aui-buttonitem-content, .aui-tabview-list .aui-tab-label {
	@include button-default;
}

.invite-members, .social-relations a {
	@include border-radius(4px);

	&:hover, &:focus {
		@include button-hover;

		text-decoration: none;
	}

	&:active {
		@include button-active;
	}
}

.aui-dialog-content {
	padding: 0;

	.aui-dialog-hd {
		border: 1px solid $defaultBorderColor;

		@include border-radius(4px 4px 0 0);

		border-width: 0 0 1px;

		@include box-shadow(none);

		padding: 0 0 0 0.5em;

		.aui-toolbar {
			margin: -1px;
		}
	}
}

.aui-panel-hd-text {
	font-weight: normal;
}

.aui-panel-bd {
	padding: 0 1em 1em;
}

.aui-button-holder {
	overflow: visible;

	.aui-toolbar-item {
		margin: 0 -1px;
	}

	.aui-toolbar-first {
		margin-left: 0;
	}
}

.aui-buttonitem-content {
	margin-right: -1px;

	&.aui-toolbar-last {
		margin-right: 0;
	}
}

.aui-textboxlist-content {
	overflow: hidden;
}

.aui-tooltip-content {
	@include box-shadow(0 2px 10px -4px rgba(0, 0, 0, 1));
}

.aui-overlaycontextpanel-arrow-bl {
	.aui-overlaycontextpanel-pointer {
		border-right: 12px dashed transparent;
		padding: 0;
	}

	.aui-overlaycontextpanel-pointer-inner {
		left: 1px;
	}
}

.hidden-accessible, #navigation h1 {
	@include hidden-accessible;
}
/* ... */

